--- a/www/electron/style.css
+++ b/www/electron/style.css
@@ -3,6 +3,7 @@ html, body{
   padding: 0;
   height: 100%;
   width: 100%;
+  background-color: #000000;
 }
 
 #camera, #camera--view, #camera--sensor, #camera--output{
@@ -10,6 +11,7 @@ html, body{
     height: 100%;
     width: 100%;
     object-fit: cover;
+	background-color: #000000;
 }
 
 #camera--view, #camera--sensor, #camera--output{
